# Model-Testing

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/: __init__.py
backend/api/: main.py
backend/api/models/: loader.py  schemas.py
backend/api/routers/: __init__.py  foods.py  predict.py
backend/docker/: Dockerfile  README.md  docker-compose.yml
backend/models/: xgboost_feature_names_20251103.pkl  xgboost_label_encoders_20251103.pkl  xgboost_model_metadata_20251103.json  xgboost_nutrition_model_20251103.pkl  xgboost_scaler_20251103.pkl
backend/tests/: test_additional_endpoints.py  test_loader_and_api.py
frontend/: .env.example  .env.production  index.html  package-lock.json  package.json  vite.config.js
frontend/public/: browserconfig.xml  manifest.json  sw.js
frontend/public/data/: food_composition_clean.csv
frontend/public/icons/: README.md
frontend/src/: App.vue  i18n.js  main.js  style.css
frontend/src/components/chat/: ChatInterface.vue
frontend/src/components/layout/: AppFooter.vue  AppHeader.vue  InstallPrompt.vue
frontend/src/composables/: useVoice.js
frontend/src/locales/: en.json  lg.json
frontend/src/router/: index.js
frontend/src/services/: api.js
frontend/src/store/: appStore.js  chatStore.js  predictionStore.js  settingsStore.js
frontend/src/views/: ChatView.vue  ContactView.vue  FoodsView.vue  HistoryView.vue  HomeView.vue  PredictView.vue  PricingView.vue  ResultsView.vue  SettingsView.vue
frontend/tests/: predictionStore.spec.js
(+8 files in other folders)
