[project]
name = "model-testing"
version = "0.1.0"
description = "Platform for testing our models"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.11.0",
    "black>=25.11.0",
    "catboost>=1.2.8",
    "click>=8.3.1",
    "datasets>=4.4.1",
    "evaluate>=0.4.6",
    "fairlearn>=0.13.0",
    "fastapi>=0.121.3",
    "flake8>=7.3.0",
    "h5py>=3.15.1",
    "hyperopt>=0.2.7",
    "ipywidgets>=8.1.8",
    "joblib>=1.5.2",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.7",
    "mypy>=1.18.2",
    "networkx>=3.5",
    "nltk>=3.9.2",
    "notebook>=7.5.0",
    "numpy>=2.3.5",
    "openpyxl>=3.1.5",
    "optuna>=4.6.0",
    "pandas>=2.3.3",
    "peft>=0.18.0",
    "plotly>=6.5.0",
    "psutil>=7.1.3",
    "pyarrow>=22.0.0",
    "pydantic>=2.12.4",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "python-dotenv>=1.2.1",
    "pytorch-tabnet>=4.1.0",
    "ray[tune]>=2.51.1",
    "rouge-score>=0.1.2",
    "scikit-learn>=1.7.2",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.1.2",
    "shap>=0.49.1",
    "sphinx>=8.2.3",
    "sphinx-rtd-theme>=3.0.2",
    "streamlit>=1.50.0",
    "torch>=2.9.1",
    "torch-geometric>=2.7.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
    "uvicorn>=0.38.0",
    "xgboost>=3.1.1",
    "xlrd>=2.0.2",
]
